--- a/index.html
+++ b/index.html
@@ -20,21 +20,15 @@
           ><img class="pageLogo" src="Assets/ico/Logo-1.svg" alt="pageLogo"
         /></a>
         <ul>
-          <li><a href="#introPage">ABOUT</a></li>
-          <li><a href="#skillPage">SOLUTION</a></li>
-          <li><a href="#blogPage">BLOG</a></li>
-          <li><a href="#projectPage">PROJECT</a></li>
-          <li><a href="#contactPage">CONTACT</a></li>
+          <li><a class="navlink" href="#introPage">ABOUT</a></li>
+          <li><a class="navlink" href="#skillPage">SOLUTION</a></li>
+          <li><a class="navlink" href="#blogPage">BLOG</a></li>
+          <li><a class="navlink" href="#projectPage">PROJECT</a></li>
+          <li><a class="navlink" href="#contactPage">CONTACT</a></li>
         </ul>
       </nav>
     </header>
     <aside class="socialMedia">
-      <!-- <div class="hoverText">
-        <span>FACEBOOK</span>
-        <span>INSTAGRAM</span>
-        <span>TWITTER</span>
-        <span>LINKEDIN</span>
-      </div> -->
       <p>Follow me on:</p>
       <a href="#"
         ><img class="smAsset" src="Assets/ico/facebook.svg" alt="facebook"
@@ -48,7 +42,6 @@
       <a href="#"
         ><img class="smAsset" src="Assets/ico/linkedin.svg" alt="linkedin"
       /></a>
-     
     </aside>
     <main class="mainContent">
       <section id="introPage">
@@ -59,23 +52,18 @@
               src="Assets/img/introPicture.png"
               alt="welcomePhoto"
             />
+
             <h1>REY</h1>
             <p>
-              Designer | Developer | Photographer <br /><br />
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-              Temporibus hic corrupti placeat eligendi corporis distinctio
-              voluptate id aperiam, eaque laudantium? Lorem ipsum dolor sit amet
-              consectetur, adipisicing elit. Temporibus hic corrupti placeat
-              eligendi corporis distinctio voluptate id aperiam, eaque
-              laudantium?
+              Designer | Developer | Traveler <br /><br />
+              I design for web assets, marketing collaterals, clothing lines and
+              more. with a side hobby for cycling and photography
             </p>
-            <button class="resumeButton">SEE MY RESUME</button>
-            
-            <img
-              class="mouseScroll"
-              src="Assets/ico/mouse-cursor.svg"
-              alt=""
-            />
+
+            <img class="mouseScroll" src="Assets/ico/mouse-cursor.svg" alt="" />
+            <div class="resumebttn">
+              <button class="resumeButton">SEE MY RESUME</button>
+            </div>
           </div>
         </div>
       </section>
@@ -157,9 +145,7 @@
         <div class="footerSocialImages">
           <h1>Follow me on</h1>
           <a href="#"><img src="Assets/ico/facebook.svg" alt="facebook" /></a>
-          <a href="#"
-            ><img src="Assets/ico/instagram.svg" alt="instagram"
-          /></a>
+          <a href="#"><img src="Assets/ico/instagram.svg" alt="instagram" /></a>
           <a href="#"><img src="Assets/ico/twitter.svg" alt="twitter" /></a>
           <a href="#"><img src="Assets/ico/linkedin.svg" alt="linkedin" /></a>
         </div>
