--- a/index.html
+++ b/index.html
@@ -1,156 +1,164 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Source+Sans+Pro:wght@200;300;400;600;700;900&display=swap"
-      rel="stylesheet"
-    />
-    <title>Rey</title>
-  </head>
-  <body>
-    <header id="header">
-      <nav class="navbar">
-        <a href="#"
-          ><img class="pageLogo" src="Assets/ico/Logo-1.svg" alt="pageLogo"
-        /></a>
-        <ul>
-          <li><a class="navlink" href="#introPage">ABOUT</a></li>
-          <li><a class="navlink" href="#skillPage">SOLUTION</a></li>
-          <li><a class="navlink" href="#blogPage">BLOG</a></li>
-          <li><a class="navlink" href="#projectPage">PROJECT</a></li>
-          <li><a class="navlink" href="#contactPage">CONTACT</a></li>
-        </ul>
-      </nav>
-    </header>
-    <aside class="socialMedia">
-      <p>Follow me on:</p>
-      <a href="#"
-        ><img class="smAsset" src="Assets/ico/facebook.svg" alt="facebook"
-      /></a>
-      <a href="#"
-        ><img class="smAsset" src="Assets/ico/instagram.svg" alt="instagram"
-      /></a>
-      <a href="#"
-        ><img class="smAsset" src="Assets/ico/twitter.svg" alt="twitter"
-      /></a>
-      <a href="#"
-        ><img class="smAsset" src="Assets/ico/linkedin.svg" alt="linkedin"
-      /></a>
-    </aside>
-    <main class="mainContent">
-      <section id="introPage">
-        <div class="introContent">
-          <div class="intro">
-            <img
-              class="welcomePhoto"
-              src="Assets/img/introPicture.png"
-              alt="welcomePhoto"
-            />
 
-            <h1>REY</h1>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="style.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Source+Sans+Pro:wght@200;300;400;600;700;900&display=swap"
+    rel="stylesheet" />
+  <title>0513</title>
+</head>
+
+<body>
+  <header id="header">
+    <nav class="navbar">
+      <a href="#"><img class="pageLogo" src="Assets/ico/Logo-1.svg" alt="pageLogo" /></a>
+      <ul>
+        <li><a class="navlink" href="#introPage">ABOUT</a></li>
+        <li><a class="navlink" href="#skillPage">SOLUTION</a></li>
+        <li><a class="navlink" href="#blogPage">BLOG</a></li>
+        <li><a class="navlink" href="#projectPage">PROJECT</a></li>
+        <li><a class="navlink" href="#contactPage">CONTACT</a></li>
+      </ul>
+    </nav>
+  </header>
+  <aside class="socialMedia">
+    <!-- <p>Social Network</p> -->
+    <a href="#"><img class="smAsset" src="Assets/ico/facebook.svg" alt="facebook" /></a>
+    <a href="#"><img class="smAsset" src="Assets/ico/instagram.svg" alt="instagram" /></a>
+    <a href="#"><img class="smAsset" src="Assets/ico/twitter.svg" alt="twitter" /></a>
+    <a href="#"><img class="smAsset" src="Assets/ico/linkedin.svg" alt="linkedin" /></a>
+  </aside>
+  <main class="mainContent">
+    <section id="introPage">
+      <div class="resumebttn">
+        <button class="resumeButton">SEE MY RESUME</button>
+      </div>
+      <div class="introContent">
+        <div class="intro">
+          <img class="welcomePhoto" src="Assets/img/introPicture.png" alt="welcomePhoto" />
+          <div class="introText">
+            <h1>Hi!</h1>
             <p>
-              Designer | Developer | Traveler <br /><br />
-              I design for web assets, marketing collaterals, clothing lines and
-              more. with a side hobby for cycling and photography
+
+              I am 0513-R. A Full Stack Developer with a background in designing web assets, marketing collaterals,
+              clothing lines and more.
             </p>
+          </div>
+          <img class="mouseScroll" src="Assets/ico/mouse-cursor.svg" alt="" />
 
-            <img class="mouseScroll" src="Assets/ico/mouse-cursor.svg" alt="" />
-            <div class="resumebttn">
-              <button class="resumeButton">SEE MY RESUME</button>
-            </div>
+        </div>
+      </div>
+    </section>
+    <section id="skillPage">
+      <div class="skillContent">
+        <h2>SKILLS</h2>
+        <img class="skillIcon" src="Assets/ico/html.svg" />
+        <img class="skillIcon" src="Assets/ico/css.svg" />
+        <img class="skillIcon" src="Assets/ico/javascript.svg" />
+        <img class="skillIcon" src="Assets/ico/ubuntu.svg" />
+        <img class="skillIcon" src="Assets/ico/git.svg" />
+        <img class="skillIcon" src="Assets/ico/fedora.svg" />
+        <img class="skillIcon" src="Assets/ico/gitlab.svg" />
+        <img class="skillIcon" src="Assets/ico/vscode.svg" />
+        <img class="skillIcon" src="Assets/ico/figma.svg" />
+        <img class="skillIcon" src="Assets/ico/photoshop.svg" />
+        <img class="skillIcon" src="Assets/ico/indesign.svg" />
+        <img class="skillIcon" src="Assets/ico/illustrator.svg" />
+      </div>
+    </section>
+    <section id="blogPage">
+      <div class="blogContent">
+        <div class="blogPost post1">
+          <div class="blogText">
+            <h1>Post 1</h1>
+            <p>
+              Lorem ipsum dolor sit amet consectetur. Massa consectetur sit
+              viverra etiam sagittis donec iaculis. Et urna nibh ullamcorper
+              sodales euismod tempor elit. Venenatis augue turpis hendrerit
+              tortor dictum
+            </p>
+            <a href="#"></a>
           </div>
         </div>
-      </section>
-      <section id="skillPage">
-        <div class="skillContent">
-          <h2>SKILLS</h2>
-          <img class="skillIcon" src="Assets/ico/html.svg" />
-          <img class="skillIcon" src="Assets/ico/css.svg" />
-          <img class="skillIcon" src="Assets/ico/javascript.svg" />
-          <img class="skillIcon" src="Assets/ico/ubuntu.svg" />
-          <img class="skillIcon" src="Assets/ico/git.svg" />
-          <img class="skillIcon" src="Assets/ico/fedora.svg" />
-          <img class="skillIcon" src="Assets/ico/gitlab.svg" />
-          <img class="skillIcon" src="Assets/ico/vscode.svg" />
-          <img class="skillIcon" src="Assets/ico/figma.svg" />
-          <img class="skillIcon" src="Assets/ico/photoshop.svg" />
-          <img class="skillIcon" src="Assets/ico/indesign.svg" />
-          <img class="skillIcon" src="Assets/ico/illustrator.svg" />
-        </div>
-      </section>
-      <section id="blogPage">
-        <div class="blogContent">
-          <div class="blogPost post1">
-            <div class="blogText">
-              <h1>Post 1</h1>
-              <p>
-                Lorem ipsum dolor sit amet consectetur. Massa consectetur sit
-                viverra etiam sagittis donec iaculis. Et urna nibh ullamcorper
-                sodales euismod tempor elit. Venenatis augue turpis hendrerit
-                tortor dictum
-              </p>
-              <a href="#"></a>
-            </div>
-          </div>
-          <div class="blogPost post2">
-            <div class="blogText">
-              <h1>Post 2</h1>
-              <p>
-                Lorem ipsum dolor sit amet consectetur. Massa consectetur sit
-                viverra etiam sagittis donec iaculis. Et urna nibh ullamcorper
-                sodales euismod tempor elit. Venenatis augue turpis hendrerit
-                tortor dictum
-              </p>
-              <a href="#"></a>
-            </div>
-          </div>
-          <div class="blogPost post3">
-            <div class="blogText">
-              <h1>Post 3</h1>
-              <p>
-                Lorem ipsum dolor sit amet consectetur. Massa consectetur sit
-                viverra etiam sagittis donec iaculis. Et urna nibh ullamcorper
-                sodales euismod tempor elit. Venenatis augue turpis hendrerit
-                tortor dictum
-              </p>
-              <a href="#"></a>
-            </div>
+        <div class="blogPost post2">
+          <div class="blogText">
+            <h1>Post 2</h1>
+            <p>
+              Lorem ipsum dolor sit amet consectetur. Massa consectetur sit
+              viverra etiam sagittis donec iaculis. Et urna nibh ullamcorper
+              sodales euismod tempor elit. Venenatis augue turpis hendrerit
+              tortor dictum
+            </p>
+            <a href="#"></a>
           </div>
         </div>
-      </section>
-      <section id="projectPage">
-        <div class="projectContent">
-          <h2>PROJECTS</h2>
+        <div class="blogPost post3">
+          <div class="blogText">
+            <h1>Post 3</h1>
+            <p>
+              Lorem ipsum dolor sit amet consectetur. Massa consectetur sit
+              viverra etiam sagittis donec iaculis. Et urna nibh ullamcorper
+              sodales euismod tempor elit. Venenatis augue turpis hendrerit
+              tortor dictum
+            </p>
+            <a href="#"></a>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section id="projectPage">
+      <div class="projectContent">
+        <h2>PROJECTS</h2>
 
-          <div class="projectContainer">
-            <div class="project">SOON</div>
-            <div class="project">SOON</div>
-            <div class="project">SOON</div>
+        <div class="projectContainer">
+          <div class="project">
+            <p>SOON</p>
           </div>
+          <div class="project">
+            <p>SOON</p>
+          </div>
+          <div class="project">
+            <p>SOON</p>
+          </div>
+          <div class="project">
+            <p>SOON</p>
+          </div>
+          <!-- <div class="project">
+            <p>SOON</p>
+          </div> -->
         </div>
-      </section>
-      <section id="contactPage">
-        <form class="contactForm">
-          <input type="text" placeholder="Your name" />
-          <input type="text" placeholder="Your Email" />
-          <input type="text" placeholder="What you wanna say" />
-          <button class="formSubmit">SUBMIT</button>
-        </form>
-        <div class="footerSocialImages">
-          <h1>Follow me on</h1>
-          <a href="#"><img src="Assets/ico/facebook.svg" alt="facebook" /></a>
-          <a href="#"><img src="Assets/ico/instagram.svg" alt="instagram" /></a>
-          <a href="#"><img src="Assets/ico/twitter.svg" alt="twitter" /></a>
-          <a href="#"><img src="Assets/ico/linkedin.svg" alt="linkedin" /></a>
-        </div>
-      </section>
-    </main>
-    <footer>SOME COPYRIGHT 2023</footer>
-  </body>
+      </div>
+    </section>
+    <section id="contactPage">
+      <h2>CONTACT ME</h2>
+      <form class="contactForm">
+        <input type="text" placeholder="Your name" />
+        <input type="text" placeholder="Your Email" />
+        <input type="text" placeholder="What you wanna say" />
+        <button class="formSubmit">SUBMIT</button>
+      </form>
+
+    </section>
+  </main>
+  <footer>
+    <a href="#"><img class="pageLogo" src="Assets/ico/Logo-1.svg" alt="pageLogo" /></a>
+    <p>© 2023 - Made by Rey Cornico</p>
+  </footer>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/MotionPathPlugin.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/EaselPlugin.min.js"></script>
+
+  <script src="gsap.js"></script>
+</body>
+
 </html>
