--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Source+Sans+Pro:wght@200;300;400;600;700;900&display=swap"
     rel="stylesheet" />
+  <link rel="icon" type="image/x-icon" href="./Assets/ico/logo.ico">
   <title>0513</title>
 </head>
 
