--- a/index.html
+++ b/index.html
@@ -58,20 +58,57 @@
     </section>
     <section id="skillPage">
       <div class="skillContent">
-        <h2>SKILLS</h2>
-        <img class="skillIcon" src="Assets/ico/html.svg" />
-        <img class="skillIcon" src="Assets/ico/css.svg" />
-        <img class="skillIcon" src="Assets/ico/javascript.svg" />
-        <img class="skillIcon" src="Assets/ico/ubuntu.svg" />
-        <img class="skillIcon" src="Assets/ico/git.svg" />
-        <img class="skillIcon" src="Assets/ico/fedora.svg" />
-        <img class="skillIcon" src="Assets/ico/gitlab.svg" />
-        <img class="skillIcon" src="Assets/ico/vscode.svg" />
-        <img class="skillIcon" src="Assets/ico/figma.svg" />
-        <img class="skillIcon" src="Assets/ico/photoshop.svg" />
-        <img class="skillIcon" src="Assets/ico/indesign.svg" />
-        <img class="skillIcon" src="Assets/ico/illustrator.svg" />
-      </div>
+        <h2>TECH STACK</h2>
+        <div class="icon-grid">
+          <div class="skill-icon">
+            <img src="Assets/ico/html.svg" alt="HTML" />
+            <p class="icon-name">HTML</p>
+          </div>
+          <div class="skill-icon">
+            <img src="Assets/ico/css.svg" alt="CSS" />
+            <p class="icon-name">CSS</p>
+          </div>
+          <div class="skill-icon">
+            <img src="Assets/ico/javascript.svg" alt="JavaScript" />
+            <p class="icon-name">JavaScript</p>
+          </div>
+          <div class="skill-icon">
+            <img src="Assets/ico/ubuntu.svg" alt="Ubuntu" />
+            <p class="icon-name">Ubuntu</p>
+          </div>
+          <div class="skill-icon">
+            <img src="Assets/ico/git.svg" alt="Git" />
+            <p class="icon-name">Git</p>
+          </div>
+          <div class="skill-icon">
+            <img src="Assets/ico/fedora.svg" alt="Fedora" />
+            <p class="icon-name">Fedora</p>
+          </div>
+          <div class="skill-icon">
+            <img src="Assets/ico/gitlab.svg" alt="GitLab" />
+            <p class="icon-name">GitLab</p>
+          </div>
+          <div class="skill-icon">
+            <img src="Assets/ico/vscode.svg" alt="VS Code" />
+            <p class="icon-name">VS Code</p>
+          </div>
+          <div class="skill-icon">
+            <img src="Assets/ico/figma.svg" alt="Figma" />
+            <p class="icon-name">Figma</p>
+          </div>
+          <div class="skill-icon">
+            <img src="Assets/ico/photoshop.svg" alt="Photoshop" />
+            <p class="icon-name">Photoshop</p>
+          </div>
+          <div class="skill-icon">
+            <img src="Assets/ico/indesign.svg" alt="InDesign" />
+            <p class="icon-name">InDesign</p>
+          </div>
+          <div class="skill-icon">
+            <img src="Assets/ico/illustrator.svg" alt="Illustrator" />
+            <p class="icon-name">Illustrator</p>
+          </div>
+        </div>
     </section>
     <section id="blogPage">
       <div class="blogContent">
@@ -142,7 +179,7 @@
         <input type="text" placeholder="Your name" />
         <input type="text" placeholder="Your Email" />
         <input type="text" placeholder="What you wanna say" />
-        <button class="formSubmit">SUBMIT</button>
+        <button class="formSubmit">WORK WITH ME</button>
       </form>
 
     </section>
