--- a/index.html
+++ b/index.html
@@ -155,17 +155,28 @@
         <h2>PROJECTS</h2>
 
         <div class="projectContainer">
+
           <div class="project">
-            <p>SOON</p>
+            <p class="projectTitle">Project 1</p>
+            <a href="https://brandedapp.netlify.app/" class="projectInset"></a>
           </div>
           <div class="project">
-            <p>SOON</p>
+            <p class="projectTitle">Project 2</p>
+
+            <a href="#" class="projectInset"></a>
+
           </div>
           <div class="project">
-            <p>SOON</p>
+            <p class="projectTitle">Project 2</p>
+
+            <a href="#" class="projectInset"></a>
+
           </div>
           <div class="project">
-            <p>SOON</p>
+            <p class="projectTitle">Project 2</p>
+
+            <a href="#" class="projectInset"></a>
+
           </div>
           <!-- <div class="project">
             <p>SOON</p>
