--- a/index.html
+++ b/index.html
@@ -158,34 +158,23 @@
 
 
           <div class="project">
-            <p class="projectTitle">Branded App</p>
+            <p class="projectTitle">Branded App - Creator Platform</p>
             <a href="https://brandedapp.netlify.app/" class="projectInset project-one"></a>
           </div>
           <div class="project">
-            <p class="projectTitle">ETC Qoutes</p>
-
+            <p class="projectTitle">ETC Qoutes Generator</p>
             <a href="https://etc-qoutes.onrender.com" class="projectInset project-two"></a>
-
           </div>
           <div class="project">
-            <p class="projectTitle">Project 2</p>
-
+            <p class="projectTitle">Ping Boom - A Javascript Game</p>
             <a href="#" class="projectInset project-three"></a>
-
           </div>
           <div class="project">
-            <p class="projectTitle">Project 2</p>
-
+            <p class="projectTitle">ETC Qoutes</p>
             <a href="#" class="projectInset"></a>
-
-            <p class="projectTitle">Project 2</p>
-
-            <a href="#" class="projectInset"></a>
-
           </div>
-          <!-- <div class="project">
-            <p>SOON</p>
-          </div> -->
+
+
         </div>
       </div>
     </section>
