--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
   <header id="header">
     <nav class="navbar">
-      <a href="#"><img class="pageLogo" src="Assets/ico/Logo-1.svg" alt="pageLogo" /></a>
+      <a href="https://0513.vercel.app/"><img class="pageLogo" src="Assets/ico/Logo-1.svg" alt="pageLogo" /></a>
       <ul>
         <li><a class="navlink" href="#introPage">ABOUT</a></li>
         <li><a class="navlink" href="#skillPage">SOLUTION</a></li>
@@ -167,23 +167,21 @@
           </div>
           <div class="project">
             <p class="projectTitle">Ping Boom - A Javascript Game</p>
-            <a href="#" class="projectInset project-three"></a>
+            <a href="https://ping-boom.vercel.app/" class="projectInset project-three"></a>
           </div>
           <div class="project">
-            <p class="projectTitle">ETC Qoutes</p>
+            <p class="projectTitle">Future Project</p>
             <a href="#" class="projectInset"></a>
           </div>
-
-
         </div>
       </div>
     </section>
     <section id="contactPage">
       <h2>CONTACT ME</h2>
       <form class="contactForm">
-        <input type="text" placeholder="Your name" />
+        <input type="text" placeholder="Your Name" />
         <input type="text" placeholder="Your Email" />
-        <input type="text" placeholder="What you wanna say" />
+        <input type="text" placeholder="What's up" />
         <button class="formSubmit">WORK WITH ME</button>
       </form>
 
